BUG: CSS 오류 수정(backface-visibility) -style

--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@
   position: absolute;
   width: 100%;
   height: var(--imageHeight);
-  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;  backface-visibility: hidden;
 }
 
 #playing .image{
